[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Ocean/Ocean.gd" type="Script" id=1]
[ext_resource path="res://Entities/Ocean/FishSpawners.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform float radius = 300.0;

void fragment() {
	vec4 col = texture(TEXTURE, UV);
	vec2 ps = TEXTURE_PIXEL_SIZE;

	col += texture(TEXTURE, UV + vec2(0.0, -radius) * ps);
	col += texture(TEXTURE, UV + vec2(0.0, radius) * ps);
	col += texture(TEXTURE, UV + vec2(-radius, 0.0) * ps);
	col += texture(TEXTURE, UV + vec2(radius, 0.0) * ps);
	col /= 5.0;

	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/radius = 300.0

[sub_resource type="LineShape2D" id=3]
normal = Vector2( 0.999986, 0.00530692 )

[sub_resource type="LineShape2D" id=4]

[sub_resource type="LineShape2D" id=5]
normal = Vector2( -0.999977, 0.00684299 )
d = 9.92512

[node name="Ocean" type="StaticBody2D"]
material = SubResource( 2 )
script = ExtResource( 1 )

[node name="Spawner1" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( -309.627, 529.447 )

[node name="Spawner2" type="Node2D" parent="."]
use_parent_material = true
position = Vector2( 272.06, 528.896 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -935.097, 5.56186 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, 595.283 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 876.508, 1.54073 )
shape = SubResource( 5 )

[node name="FishSpawners" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Spawner1" type="Node2D" parent="FishSpawners"]
position = Vector2( -877.807, 330.723 )

[node name="Spawner2" type="Node2D" parent="FishSpawners"]
position = Vector2( -658.356, 482.176 )

[node name="Spawner3" type="Node2D" parent="FishSpawners"]
position = Vector2( -9.27271, 522.357 )

[node name="Spawner4" type="Node2D" parent="FishSpawners"]
position = Vector2( 448.176, 494.539 )

[node name="Spawner5" type="Node2D" parent="FishSpawners"]
position = Vector2( 800.536, 380.177 )
